new get manga list
